# mic-binpackingproblem-adapter-domain/src/main/java/com/tfg/bpp/adapter/model/BppBinsDestructionOperation.java
@@ -11,7 +11,9 @@ import lombok.experimental.SuperBuilder;
 @SuperBuilder
 @NoArgsConstructor
 @AllArgsConstructor
-public class BppSolvableInstance extends BppInstance {
+public class BppBinsDestructionOperation extends BppNeighborhoodStructureOperation{
 
-  private BppAlgorithm algorithm;
+  private int numberToDestroy;
+
+  private BppBinsSelectionFunction binsSelectionFunction;
 }
