# mic-binpackingproblem-adapter-domain/src/main/java/com/tfg/bpp/adapter/model/BppNeighborhoodStructureOperation.java
@@ -1,17 +1,16 @@
 package com.tfg.bpp.adapter.model;
 
 import lombok.AllArgsConstructor;
+import lombok.Builder;
 import lombok.Data;
-import lombok.EqualsAndHashCode;
 import lombok.NoArgsConstructor;
 import lombok.experimental.SuperBuilder;
 
-@EqualsAndHashCode(callSuper = true)
 @Data
 @SuperBuilder
 @NoArgsConstructor
 @AllArgsConstructor
-public class BppSolvableInstance extends BppInstance {
+public class BppNeighborhoodStructureOperation {
 
-  private BppAlgorithm algorithm;
+  private BppNeighborhoodStructureOperationType type;
 }
