# mic-binpackingproblem-adapter-domain/src/main/java/com/tfg/bpp/adapter/model/BppStrategyControl.java
@@ -1,0 +1,5 @@
+package com.tfg.bpp.adapter.model;
+
+public enum BppStrategyControl {
+  HILL_CLIMBING
+}
