# mic-binpackingproblem-adapter-infrastructure-api/src/main/java/com/tfg/bpp/adapter/rest/controller/BppTestInstanceResultsController.java
@@ -3,10 +3,14 @@ package com.tfg.bpp.adapter.rest.controller;
 import com.tfg.bpp.adapter.port.inbound.service.MessageServicePort;
 import com.tfg.bpp.adapter.port.inbound.usecase.CreateBppTestInstanceResultsByBppTestInstanceUseCasePort;
 import com.tfg.bpp.adapter.port.inbound.usecase.CreateBppTestInstanceResultsByBppTestInstanceUseCasePort.CreateBppTestInstanceResultsByBppTestInstanceResponse;
+import com.tfg.bpp.adapter.port.inbound.usecase.CreateBppTestResultsByBppInstanceUseCasePort;
+import com.tfg.bpp.adapter.port.inbound.usecase.CreateBppTestResultsByBppInstanceUseCasePort.CreateBppTestResultsByBppInstancesResponse;
 import com.tfg.bpp.adapter.rest.mapper.BppTestInstanceResultsRestMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.openapitools.api.BppTestInstanceResultsApi;
+import org.openapitools.api.BppTestsApi;
+import org.openapitools.model.CreateByBppInstancesRequest;
+import org.openapitools.model.CreateByBppInstancesResponse;
 import org.openapitools.model.CreateByBppTestInstancesRequest;
 import org.openapitools.model.CreateByBppTestInstancesResponse;
 import org.springframework.http.ResponseEntity;
@@ -15,12 +19,14 @@ import org.springframework.web.bind.annotation.RestController;
 @RestController
 @RequiredArgsConstructor
 @Slf4j
-public class BppTestInstanceResultsController implements BppTestInstanceResultsApi {
+public class BppTestInstanceResultsController implements BppTestsApi {
 
   private static final String CLASS_NAME = BppTestInstanceResultsController.class.getName();
 
   private final CreateBppTestInstanceResultsByBppTestInstanceUseCasePort
       createBppTestInstanceResultsByBppTestInstanceUseCasePort;
+
+  private final CreateBppTestResultsByBppInstanceUseCasePort createBppTestResultsByBppInstanceUseCasePort;
 
   private final MessageServicePort messageServicePort;
 
@@ -41,4 +47,19 @@ public class BppTestInstanceResultsController implements BppTestInstanceResultsA
     return ResponseEntity.ok(
         this.bppTestInstanceResultsRestMapper.toCreateByBppTestInstancesResponse(response));
   }
+
+  @Override
+  public ResponseEntity<CreateByBppInstancesResponse> createByBppInstances(CreateByBppInstancesRequest createByBppInstancesRequest, String acceptLanguage) {
+    log.info("[start] {}.createByBppInstances", CLASS_NAME);
+
+    CreateBppTestResultsByBppInstancesResponse response = this.createBppTestResultsByBppInstanceUseCasePort.execute(
+            this.bppTestInstanceResultsRestMapper.toCreateBppTestResultsByBppInstancesCommand(
+                    createByBppInstancesRequest));
+
+    log.info("[end] {}.createByBppInstances", CLASS_NAME);
+
+    return ResponseEntity.ok(
+            this.bppTestInstanceResultsRestMapper.toCreateByBppInstancesResponse(response));
+  }
+
 }
